Fix menu to show all sections on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -331,7 +331,7 @@ footer {
 
     #menu {
         line-height: 25px;
-        padding-top: 75px;
+        padding-top: 100px;
     }
 }
 
